--- a/Clinica-MVC/src/main/resources/static/agregar_paciente.html
+++ b/Clinica-MVC/src/main/resources/static/agregar_paciente.html
@@ -87,8 +87,8 @@
       </div>
     </nav>
     <div class="container">
-      <h1 class="mt-5">Agregar Odontólogo</h1>
-      <form id="agregarForm">
+      <h1 class="mt-5">Agregar Paciente</h1>
+      <form id="agregarFormPaciente">
         <div class="mb-3">
           <label for="nombre" class="form-label">Nombre</label>
           <input type="text" class="form-control" id="nombre" required />
@@ -98,12 +98,12 @@
           <input type="text" class="form-control" id="apellido" required />
         </div>
         <div class="mb-3">
-          <label for="matricula" class="form-label">Matrícula</label>
+          <label for="matricula" class="form-label">DNI</label>
           <input type="text" class="form-control" id="matricula" required />
         </div>
         <button type="submit" class="btn btn-primary">Agregar</button>
       </form>
     </div>
-    <script src="js/agregar_odontologos.js"></script>
+    <script src="js/agregar_paciente.js"></script>
   </body>
 </html>
