--- a/Clinica-MVC/src/main/resources/static/index.html
+++ b/Clinica-MVC/src/main/resources/static/index.html
@@ -39,7 +39,7 @@
             <li class="nav-item dropdown">
               <a
                 class="nav-link dropdown-toggle"
-                href="#"
+                href="/"
                 role="button"
                 data-bs-toggle="dropdown"
                 aria-expanded="false"
@@ -48,13 +48,36 @@
               </a>
               <ul class="dropdown-menu">
                 <li>
-                  <a class="dropdown-item" href="/agregar_odontologos.html"
+                  <a class="dropdown-item" href="agregar_odontologos.html"
                     >Agregar odontologos</a
                   >
                 </li>
                 <li>
-                  <a class="dropdown-item" href="/listar_odontologos.html"
+                  <a class="dropdown-item" href="listar_odontologos.html"
                     >Listar odontologos</a
+                  >
+                </li>
+              </ul>
+            </li>
+            <li class="nav-item dropdown">
+              <a
+                class="nav-link dropdown-toggle"
+                href="#"
+                role="button"
+                data-bs-toggle="dropdown"
+                aria-expanded="false"
+              >
+                Gestion Pacientes
+              </a>
+              <ul class="dropdown-menu">
+                <li>
+                  <a class="dropdown-item" href="agregar_paciente.html"
+                    >Agregar paciente</a
+                  >
+                </li>
+                <li>
+                  <a class="dropdown-item" href="listar_pacientes.html"
+                    >Listar paciente</a
                   >
                 </li>
               </ul>
@@ -63,5 +86,42 @@
         </div>
       </div>
     </nav>
+    <div class="row d-flex vh-100 justify-content-center align-items-center">
+      <div class="col-md-4 mb-3 mb-sm-0">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Odontologo</h5>
+            <p class="card-text">
+              Aqui podras ir a la pagina para agregar odontologos o listar los
+              mismos.
+            </p>
+            <a class="btn btn-primary" href="agregar_odontologos.html"
+              >Agregar odontologos</a
+            >
+            <a class="btn btn-primary" href="listar_odontologos.html"
+              >Listar odontologo</a
+            >
+          </div>
+        </div>
+      </div>
+      <div class="col-md-4">
+        <div class="card">
+          <div class="card-body">
+            <h5 class="card-title">Pacientes</h5>
+            <p class="card-text">
+              Presiona cualquiera de los siguientes botones para agregar/listar
+              a los pacientes
+            </p>
+            <a class="btn btn-primary" href="agregar_paciente.html"
+              >Agregar paciente</a
+            >
+            <a class="btn btn-primary" href="listar_pacientes.html"
+              >Listar paciente</a
+            >
+          </div>
+        </div>
+      </div>
+    </div>
+    <div class=""></div>
   </body>
 </html>
